- Use parent README.md - Use nuget for EPPlus

--- a/SolutionLocalization/SolutionLocalization.csproj
+++ b/SolutionLocalization/SolutionLocalization.csproj
@@ -33,9 +33,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EPPlus">
-      <HintPath>.\EPPlus.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Build.Engine" />
     <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="Microsoft.Build.Tasks.v3.5" />
@@ -78,11 +75,13 @@
     <Compile Include="Utils\Directories.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\README.md">
+      <Link>README.md</Link>
+    </None>
     <None Include="GenerateResources.msbuild">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
-    <None Include="README.md" />
     <None Include="ResxData.xsc">
       <DependentUpon>ResxData.xsd</DependentUpon>
     </None>
@@ -102,7 +101,11 @@
   <ItemGroup>
     <Content Include="Documentacion.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="EPPlus">
+      <Version>4.5.2.1</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
