- Support multiple cultures in DataToResxTask - Messages.resx for localization of the solution.

--- a/SolutionLocalization/SolutionLocalization.csproj
+++ b/SolutionLocalization/SolutionLocalization.csproj
@@ -48,6 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Messages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Include="ProcessRunner.cs" />
     <Compile Include="ResxData.cs">
       <DependentUpon>ResxData.xsd</DependentUpon>
@@ -105,6 +110,12 @@
     <PackageReference Include="EPPlus">
       <Version>4.5.2.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
